Fix overflow on photos pages

--- a/themes/har/source/css/photos.scss
+++ b/themes/har/source/css/photos.scss
@@ -6,8 +6,8 @@
 .photo-gallery {
   display: flex;
   flex-flow: wrap;
-
-  margin: -0.25rem;
+  
+  gap: 0.5rem;
 }
 
 .photo-link {
@@ -19,7 +19,6 @@
   width: 480px;
   aspect-ratio: 16/9;
 
-  margin: 0.25rem;
   border-radius: 1rem;
 
   @include state.link($visited: null, $radius: 1rem);
